Added a separate class for linear SVM
Added a linear_svm_classifier class in a separate python file and modified the calculation of the gradients a little bit

--- a/SVM_from_scratch.ipynb
+++ b/SVM_from_scratch.ipynb
@@ -7,7 +7,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.svm import SVC\n",
+    "from linear_svm_classifier import linear_svm_classifier # class performing linear support vector machine classification"
    ]
   },
   {
@@ -32,77 +38,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "3f2ae56d-09bc-4a36-8b40-cb84317fa595",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class svm_classifier():\n",
+    "# class svm_classifier():\n",
     "\n",
-    "    def __init__(self, learning_rate, num_iter, reg_lambda):\n",
-    "        self.learning_rate = learning_rate\n",
-    "        self.num_iter = num_iter\n",
-    "        self.reg_lambda = reg_lambda\n",
+    "#     def __init__(self, learning_rate, num_iter, reg_lambda):\n",
+    "#         self.learning_rate = learning_rate\n",
+    "#         self.num_iter = num_iter\n",
+    "#         self.reg_lambda = reg_lambda\n",
     "    \n",
-    "    def fit(self, X, Y):\n",
+    "#     def fit(self, X, Y):\n",
     "\n",
-    "        # getting the shape of x in order to find out the dimension of weights to initialize\n",
-    "        self.m, self.n = X.shape # m --> number of examples, n --> number of features in input data\n",
+    "#         # getting the shape of x in order to find out the dimension of weights to initialize\n",
+    "#         self.m, self.n = X.shape # m --> number of examples, n --> number of features in input data\n",
     "\n",
-    "        # initialize weights\n",
-    "        self.w = np.zeros(self.n) # w is a column vector of dimension n\n",
-    "        self.b = 0 # bias can be assigned a scalar and while computation it can be broadcasted according to dimension of w.T*x\n",
-    "        self.X = X\n",
-    "        self.Y = Y\n",
+    "#         # initialize weights\n",
+    "#         self.w = np.zeros(self.n) # w is a column vector of dimension n\n",
+    "#         self.b = 0 # bias can be assigned a scalar and while computation it can be broadcasted according to dimension of w.T*x\n",
+    "#         self.X = X\n",
+    "#         self.Y = Y\n",
     "\n",
-    "        # gradient descent implementation\n",
-    "        for i in range(self.num_iter):\n",
-    "            self.update_weights()\n",
+    "#         # gradient descent implementation\n",
+    "#         for i in range(self.num_iter):\n",
+    "#             self.update_weights()\n",
     "\n",
-    "    def update_weights(self):\n",
+    "#     def update_weights(self):\n",
     "\n",
-    "        ## Label Encoding\n",
-    "        # In svm classifier instead of the traditional approach of giving 0 to absence and 1 to presence of a phenomena\n",
-    "        # we will encode it to 1 for presence and -1 for absence.\n",
-    "        y_label = np.where(self.Y<=0, -1, 1)\n",
+    "#         ## Label Encoding\n",
+    "#         # In svm classifier instead of the traditional approach of giving 0 to absence and 1 to presence of a phenomena\n",
+    "#         # we will encode it to 1 for presence and -1 for absence.\n",
+    "#         y_label = np.where(self.Y<=0, -1, 1)\n",
     "\n",
-    "        # computing gradients at each pass\n",
-    "        for idx,xi in enumerate(self.X): # iterating through each example(n dimensional vector) and its index (to check label)\n",
-    "            condition = y_label[idx]*(np.dot(xi,self.w)-self.b) >= 1\n",
-    "            if condition:\n",
-    "                dw = 2*self.reg_lambda*self.w\n",
-    "                db = 0\n",
-    "            else:\n",
-    "                dw = 2*self.reg_lambda*self.w - np.dot(xi,y_label[idx])\n",
-    "                db = y_label[idx]\n",
-    "        self.w -= self.learning_rate*dw\n",
-    "        self.b -= self.learning_rate*db\n",
+    "#         # initialize gradients\n",
+    "#         dw = np.zeros(self.n)\n",
+    "#         db = 0\n",
     "\n",
-    "    def predict(self, X):\n",
-    "        output = np.dot(X, self.w) - self.b\n",
-    "        predicted_labels = np.sign(output)\n",
-    "        y_hat = np.where(predicted_labels<=-1, 0, 1)\n",
-    "        return y_hat"
+    "#         # computing gradients at each pass\n",
+    "#         for idx,xi in enumerate(self.X): # iterating through each example(n dimensional vector) and its index (to check label)\n",
+    "#             condition = y_label[idx]*(np.dot(xi,self.w)-self.b) >= 1\n",
+    "#             if not condition:\n",
+    "#                 dw += -np.dot(xi,y_label[idx]) \n",
+    "#                 db += y_label[idx]\n",
+    "\n",
+    "#         # normalize the weights\n",
+    "#         dw /= self.m\n",
+    "\n",
+    "#         # add the regularization \n",
+    "#         dw += 2*self.reg_lambda*self.w\n",
+    "\n",
+    "#         # update the parameters\n",
+    "#         self.w -= self.learning_rate*dw\n",
+    "#         self.b -= self.learning_rate*db\n",
+    "\n",
+    "#     def predict(self, X):\n",
+    "#         output = np.dot(X, self.w) - self.b\n",
+    "#         predicted_labels = np.sign(output)\n",
+    "#         y_hat = np.where(predicted_labels<=-1, 0, 1)\n",
+    "#         return y_hat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5a146a67-7fc7-4616-bebb-375f6cb48815",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## importing dependencies\n",
-    "import pandas as pd\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.svm import SVC"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "89dfcbcd-2504-480c-9eb8-6e07db9c1b18",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "4                     2.288   33        1  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "a62e9078-31de-48c2-8121-33746fca9c5a",
    "metadata": {},
    "outputs": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "1f683e4b-4bad-448c-b620-b5d3b0f41bf7",
    "metadata": {},
    "outputs": [
@@ -425,7 +425,7 @@
        "max     67.100000                  2.420000   81.000000    1.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "ebbb26b6-aa5e-4c41-87c2-fec531dce1f2",
    "metadata": {},
    "outputs": [],
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "45267eeb-1609-459a-b05d-2612f7736561",
    "metadata": {},
    "outputs": [],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "6b472d86-8b17-45b0-99aa-2d3c877740f0",
    "metadata": {},
    "outputs": [],
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "id": "a3062b36-0a95-4420-b72d-f87d89a16d6a",
    "metadata": {},
    "outputs": [
@@ -489,7 +489,7 @@
        "((614, 8), (614,))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,18 +500,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 10,
    "id": "8c50e823-ffae-4096-9b68-7ce13c78db78",
    "metadata": {},
    "outputs": [],
    "source": [
-    "svmc = svm_classifier(learning_rate = 0.01, num_iter=1000, reg_lambda=0.01)\n",
+    "svmc = linear_svm_classifier(learning_rate = 0.01, num_iter=1000, reg_lambda=0.01)\n",
     "svmc.fit(x_train_scaled, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "34ceffaf-588a-4244-bd2e-7c1a3821dab1",
    "metadata": {},
    "outputs": [],
@@ -522,17 +522,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "70012986-ec0c-4f21-b13f-fcb724aec91d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6824104234527687"
+       "0.7687296416938111"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,17 +543,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "e975ca2e-e90b-4bed-a427-6c766131737e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6753246753246753"
+       "0.7337662337662337"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "623f1fc8-fde5-4435-bf8c-0fcb6501ae3f",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
        "0.8306188925081434"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,12 +606,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1b2df1c4-fba3-4a94-adfd-2b8790c8e0e3",
+   "cell_type": "markdown",
+   "id": "10ffc748-7391-4733-8e5d-79154a461b5b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Lets make the class more functional by adding a couple of other parameters to the class"
+   ]
   }
  ],
  "metadata": {
