Image classification using KNN
an small dataset of 8*8 digit images were taken and KNN algorithm was implemented from scratch to perform image classification of the digits.
Input data size - 1797 images

--- a/SVM_image_classification.ipynb
+++ b/SVM_image_classification.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "07e03409-b820-48cd-9aa1-600efcd64fe7",
    "metadata": {},
    "outputs": [],
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "4f9300c4-0fec-435e-830e-5add23f7b321",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "00c1a005-95cf-48c7-ad08-988feaf41bbb",
    "metadata": {},
    "outputs": [],
@@ -41,217 +41,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "382d2148-c3fe-49a1-8cf3-f3647128f32d",
+   "execution_count": 5,
+   "id": "d782a0b8-e41f-47ae-9690-ea1d61cc3a7d",
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>pixel0</th>\n",
-       "      <th>pixel1</th>\n",
-       "      <th>pixel2</th>\n",
-       "      <th>pixel3</th>\n",
-       "      <th>pixel4</th>\n",
-       "      <th>pixel5</th>\n",
-       "      <th>pixel6</th>\n",
-       "      <th>pixel7</th>\n",
-       "      <th>pixel8</th>\n",
-       "      <th>...</th>\n",
-       "      <th>pixel774</th>\n",
-       "      <th>pixel775</th>\n",
-       "      <th>pixel776</th>\n",
-       "      <th>pixel777</th>\n",
-       "      <th>pixel778</th>\n",
-       "      <th>pixel779</th>\n",
-       "      <th>pixel780</th>\n",
-       "      <th>pixel781</th>\n",
-       "      <th>pixel782</th>\n",
-       "      <th>pixel783</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 785 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   label  pixel0  pixel1  pixel2  pixel3  pixel4  pixel5  pixel6  pixel7  \\\n",
-       "0      1       0       0       0       0       0       0       0       0   \n",
-       "1      0       0       0       0       0       0       0       0       0   \n",
-       "2      1       0       0       0       0       0       0       0       0   \n",
-       "3      4       0       0       0       0       0       0       0       0   \n",
-       "4      0       0       0       0       0       0       0       0       0   \n",
-       "\n",
-       "   pixel8  ...  pixel774  pixel775  pixel776  pixel777  pixel778  pixel779  \\\n",
-       "0       0  ...         0         0         0         0         0         0   \n",
-       "1       0  ...         0         0         0         0         0         0   \n",
-       "2       0  ...         0         0         0         0         0         0   \n",
-       "3       0  ...         0         0         0         0         0         0   \n",
-       "4       0  ...         0         0         0         0         0         0   \n",
-       "\n",
-       "   pixel780  pixel781  pixel782  pixel783  \n",
-       "0         0         0         0         0  \n",
-       "1         0         0         0         0  \n",
-       "2         0         0         0         0  \n",
-       "3         0         0         0         0  \n",
-       "4         0         0         0         0  \n",
-       "\n",
-       "[5 rows x 785 columns]"
+       "(42000, 785)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data.head()"
+    "data.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
+   "id": "7a149057-2f0b-40dc-979d-77dcf631be89",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(28000, 784)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "ab489c76-2199-45e3-98aa-c91d07ccd340",
    "metadata": {},
    "outputs": [],
@@ -259,6 +91,58 @@
     "# we will split the labels from the image data and store it in labels and pixel values variables\n",
     "labels = data['label'] # 1d array of size 42000\n",
     "pixels = data.drop('label', axis=1) # 2d array of 42000 images and each having 784 pixels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "19f40eb7-29c6-44bd-9181-820737f4944a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(42000, 784)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pixels.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d7580852-6a6a-4a92-b076-a4709cd6d199",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(42000,)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9e36f6ef-b2c4-4ffe-9b45-6ab930f33f09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data"
    ]
   },
   {
