--- a/Simple_KNN.ipynb
+++ b/Simple_KNN.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "abd91e1b-09d7-4fc9-b6f6-b5b0b6a5e377",
+   "metadata": {},
+   "source": [
+    "### Simple Example demonstrating KNN working"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "id": "1c009739-91df-4cac-9243-a7536ff2c195",
    "metadata": {},
    "outputs": [],
@@ -15,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "b7f46140-251d-48b8-bd27-07346cb8d25b",
    "metadata": {},
    "outputs": [],
@@ -28,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "e8859363-7c39-437a-ad1b-6c870c748e42",
    "metadata": {},
    "outputs": [
