Kernel Implementation using cvxopt
Added a custom class for svm classifier with kernel trick implemented, and testes a usecase for it.

--- a/SVM_from_scratch.ipynb
+++ b/SVM_from_scratch.ipynb
@@ -694,20 +694,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 72.66 % \n",
-      " Test Accuracy: 83.33 %\n",
+      "Train Accuracy: 76.17 % \n",
+      " Test Accuracy: 75.93 %\n",
       "Test Confusion Matrix:\n",
-      "[[52  4]\n",
-      " [14 38]]\n",
+      "[[40 16]\n",
+      " [10 42]]\n",
       "Test Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.79      0.93      0.85        56\n",
-      "           1       0.90      0.73      0.81        52\n",
+      "           0       0.80      0.71      0.75        56\n",
+      "           1       0.72      0.81      0.76        52\n",
       "\n",
-      "    accuracy                           0.83       108\n",
-      "   macro avg       0.85      0.83      0.83       108\n",
-      "weighted avg       0.84      0.83      0.83       108\n",
+      "    accuracy                           0.76       108\n",
+      "   macro avg       0.76      0.76      0.76       108\n",
+      "weighted avg       0.76      0.76      0.76       108\n",
       "\n"
      ]
     }
@@ -811,20 +811,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train Accuracy: 72.38 % \n",
-      " Test Accuracy: 70.0 %\n",
+      "Train Accuracy: 68.88 % \n",
+      " Test Accuracy: 69.0 %\n",
       "Test Confusion Matrix:\n",
-      "[[90 12]\n",
-      " [48 50]]\n",
+      "[[96  6]\n",
+      " [56 42]]\n",
       "Test Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.65      0.88      0.75       102\n",
-      "           1       0.81      0.51      0.62        98\n",
+      "           0       0.63      0.94      0.76       102\n",
+      "           1       0.88      0.43      0.58        98\n",
       "\n",
-      "    accuracy                           0.70       200\n",
-      "   macro avg       0.73      0.70      0.69       200\n",
-      "weighted avg       0.73      0.70      0.69       200\n",
+      "    accuracy                           0.69       200\n",
+      "   macro avg       0.75      0.68      0.67       200\n",
+      "weighted avg       0.75      0.69      0.67       200\n",
       "\n"
      ]
     }
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "623f1fc8-fde5-4435-bf8c-0fcb6501ae3f",
    "metadata": {},
    "outputs": [
@@ -894,7 +894,7 @@
        "0.7719869706840391"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "20f94602-eda9-4883-8c31-36fe0c9613d4",
    "metadata": {},
    "outputs": [
@@ -919,7 +919,7 @@
        "177"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,203 +947,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2a90a1f-2c3c-4fe8-8538-dfe14408768d",
-   "metadata": {},
-   "source": [
-    "### Using CVXOPT to perform the optimization of quadratic optimization of svm using kernels"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2f76a80e-b4ca-4cf6-8093-74e8ee83f90f",
-   "metadata": {},
-   "source": [
-    "Lets try performing a convex optimization problem of a quadratic function subject to linear constraints and extend it to SVM with kernels"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1dbe82c4-5069-4c57-8a20-8167bf2686f1",
-   "metadata": {},
-   "source": [
-    "$$Minimize: 2x1^2+x2^2+x1x2+x1+x2 $$\n",
-    "$$Subject~to:$$\n",
-    "$$x1>=0 $$\n",
-    "$$x2>=0 $$\n",
-    "$$x1+x2=1 $$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "ba4a9b91-5676-436d-945c-d2d29f10e965",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     pcost       dcost       gap    pres   dres\n",
-      " 0:  1.8889e+00  7.7778e-01  1e+00  2e-16  2e+00\n",
-      " 1:  1.8769e+00  1.8320e+00  4e-02  1e-16  6e-02\n",
-      " 2:  1.8750e+00  1.8739e+00  1e-03  2e-16  5e-04\n",
-      " 3:  1.8750e+00  1.8750e+00  1e-05  1e-16  5e-06\n",
-      " 4:  1.8750e+00  1.8750e+00  1e-07  3e-16  5e-08\n",
-      "Optimal solution found.\n"
-     ]
-    }
-   ],
-   "source": [
-    "Q = 2*matrix([ [2, .5], [.5, 1] ])\n",
-    "p = matrix([1.0, 1.0])\n",
-    "G = matrix([[-1.0,0.0],[0.0,-1.0]])\n",
-    "h = matrix([0.0,0.0])\n",
-    "A = matrix([1.0, 1.0], (1,2))\n",
-    "b = matrix(1.0)\n",
-    "sol=solvers.qp(Q, p, G, h, A, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "b2df8bc1-f12a-4b3b-b240-c73e218fcd48",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[ 2.50e-01]\n",
-      "[ 7.50e-01]\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(sol['x'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "945d80e3-d407-4813-ad6c-3ffc5c28e665",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class SVM:\n",
-    "    def __init__(self, kernel='linear', C=1.0, degree=3, gamma='auto'):\n",
-    "        self.kernel = kernel\n",
-    "        self.C = C\n",
-    "        self.degree = degree\n",
-    "        self.gamma = gamma\n",
-    "\n",
-    "    def _kernel_function(self, X1, X2):\n",
-    "        if self.kernel == 'linear':\n",
-    "            return np.dot(X1, X2.T)\n",
-    "        elif self.kernel == 'poly':\n",
-    "            return (np.dot(X1, X2.T) + 1) ** self.degree\n",
-    "        elif self.kernel == 'rbf':\n",
-    "            if self.gamma == 'auto':\n",
-    "                self.gamma = 1.0 / X1.shape[1]  # Default gamma value\n",
-    "            X1 = X1.reshape((X1.shape[0], -1))\n",
-    "            X2 = X2.reshape((X2.shape[0], -1))\n",
-    "            return np.exp(-self.gamma * np.linalg.norm(X1[:, np.newaxis] - X2, axis=2) ** 2)\n",
-    "        else:\n",
-    "            raise ValueError(f\"Unsupported kernel: {self.kernel}\")\n",
-    "        \n",
-    "    def fit(self, X, y):\n",
-    "        n_samples, n_features = X.shape\n",
-    "\n",
-    "        y = y.astype(float)\n",
-    "\n",
-    "        # Compute the kernel matrix\n",
-    "        K = self._kernel_function(X, X)\n",
-    "\n",
-    "        P = matrix(np.outer(y, y) * K)\n",
-    "        q = matrix(-np.ones(n_samples))\n",
-    "        G = matrix(np.vstack((-np.eye(n_samples), np.eye(n_samples))))\n",
-    "        h = matrix(np.hstack((np.zeros(n_samples), np.ones(n_samples) * self.C)))\n",
-    "\n",
-    "        A = matrix(y, (1, n_samples))\n",
-    "        b = matrix(0.0)\n",
-    "\n",
-    "        # Solve the quadratic programming problem using CVXOPT\n",
-    "        sol = solvers.qp(P, q, G, h, A, b)\n",
-    "\n",
-    "        # Extract the Lagrange multipliers from the solution\n",
-    "        alpha = np.ravel(sol['x'])\n",
-    "\n",
-    "        # Support vectors have non-zero lagrange multipliers\n",
-    "        sv_idx = alpha > 1e-5\n",
-    "        self.support_vectors = X[sv_idx, :]\n",
-    "        self.support_vector_labels = y[sv_idx]\n",
-    "        self.dual_coef = alpha[sv_idx] * self.support_vector_labels\n",
-    "\n",
-    "        # Intercept\n",
-    "        self.intercept = np.mean(self.support_vector_labels - np.dot(self.dual_coef, self._kernel_function(self.support_vectors, self.support_vectors)))\n",
-    "\n",
-    "    def predict(self, X):\n",
-    "        kernel_values = self._kernel_function(X, self.support_vectors)\n",
-    "        print(\"Kernel Values Shape:\", kernel_values.shape)\n",
-    "        print(\"Dual Coefficients:\", self.dual_coef)\n",
-    "        print(\"Intercept:\", self.intercept)\n",
-    "\n",
-    "    \n",
-    "        y_pred = np.sign(np.dot(kernel_values, self.dual_coef) + self.intercept)\n",
-    "    \n",
-    "        return y_pred.astype(int)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "8b38bc7b-03c4-4c60-9000-0c4900bdc260",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     pcost       dcost       gap    pres   dres\n",
-      " 0: -1.9745e+04 -2.0360e+06  2e+06  1e-02  3e-14\n",
-      " 1: -2.0114e+04 -5.9275e+04  4e+04  3e-04  1e-14\n",
-      " 2: -3.5313e+04 -3.9554e+04  4e+03  2e-05  2e-14\n",
-      " 3: -3.9062e+04 -3.9109e+04  5e+01  2e-07  2e-14\n",
-      " 4: -3.9100e+04 -3.9100e+04  5e-01  2e-09  2e-14\n",
-      " 5: -3.9100e+04 -3.9100e+04  5e-03  2e-11  2e-14\n",
-      "Optimal solution found.\n",
-      "Kernel Values Shape: (154, 391)\n",
-      "Dual Coefficients: 602    0.0\n",
-      "623    0.0\n",
-      "589    0.0\n",
-      "610    0.0\n",
-      "342    0.0\n",
-      "      ... \n",
-      "466    0.0\n",
-      "299    0.0\n",
-      "534    0.0\n",
-      "527    0.0\n",
-      "168    0.0\n",
-      "Name: Outcome, Length: 391, dtype: float64\n",
-      "Intercept: 0.0\n",
-      "Accuracy: 0.7077922077922078\n"
-     ]
-    }
-   ],
-   "source": [
-    "svm = SVM(kernel='linear', C=100, gamma=1)\n",
-    "svm.fit(x_train_scaled, y_train)\n",
-    "\n",
-    "# Make predictions\n",
-    "y_pred = svm.predict(x_test_scaled)\n",
-    "\n",
-    "# Evaluate accuracy\n",
-    "accuracy = np.mean(y_pred == y_test)\n",
-    "print(f\"Accuracy: {accuracy}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "18c2eedc-8874-47b5-8ea3-00bbe7e71ec3",
    "metadata": {},
    "source": [
@@ -1162,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "a100bcb2-4ffa-435d-8eb0-266482732305",
    "metadata": {},
    "outputs": [],
@@ -1203,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "a1a3fa16-e4ff-49d8-8019-1793bafae82b",
    "metadata": {},
    "outputs": [],
@@ -1214,18 +1017,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "d6fad029-983f-4d29-85e3-f5c2ff88add7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.7662337662337663\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predicted_labels = ova_svm.predict(x_test_scaled)\n",
     "# Evaluate accuracy\n",
@@ -1235,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "d739e53a-e278-442e-a309-4d3acdbc19e6",
    "metadata": {},
    "outputs": [],
@@ -1289,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "db814c46-6a3a-4951-b694-51ae392d707b",
    "metadata": {},
    "outputs": [],
@@ -1300,18 +1095,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "756c2f99-8d56-4ab7-9c0a-99519fafee33",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.7662337662337663\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "predicted_labels = ova_svm.predict(x_test_scaled)\n",
     "# Evaluate accuracy\n",
@@ -1339,6 +1126,117 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "36c627f9-99b2-4fb6-b28d-1c66386d221d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train_scaled.shape, x_test_scaled.shape, y_train.shape, y_test.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58e93cfd-f74d-451e-9bcf-2adef46fd539",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_test_scaled[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdadda11-0e92-4f1a-afc7-1fd2a6029149",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train.iloc[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d12b650b-93c7-4f0d-9fb5-33c9c098eb18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50ebdc4a-f495-4f5f-9d6c-ec58ce1e789d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train.iloc[143]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c20bdb59-ae30-465d-899d-de6871ba7a8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from statistics import mode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62d086eb-2194-453b-b622-1da64fa4c8be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def knn(train, train_label, test, test_label, k):\n",
+    "    pred = []\n",
+    "    for w in range(len(test)): # iterating through all the 3000 data points of the test set\n",
+    "        test_1 = test[w] # taking one image from test set (1*8 dimensional vector)\n",
+    "        diff = (train - test_1) # test_1 will be broadcasted to match the dimensions of train (614*8). diff will be 614*8 dim\n",
+    "        dist = np.sqrt(np.sum(np.square(diff), axis=1)) # 614*8 dim\n",
+    "        nearest_lbs = train_label.iloc[np.argsort(dist)[:k]] \n",
+    "        major = mode(nearest_lbs)\n",
+    "        pred.append(major)\n",
+    "    cm = pd.DataFrame(confusion_matrix(test_label, pred))\n",
+    "    err = 1-accuracy_score(test_label, pred)\n",
+    "    return [err,cm,pred]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bc0b117-9892-4811-92a2-86edac604b49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q1 = knn(x_train_scaled, y_train, x_test_scaled, y_test, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6ad795a-e3d4-4e1c-8982-5b2210812e03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q1[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e76f421-988b-4a19-8d88-eeb4eb781e83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Q1[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69c36ab4-02c6-4b92-8fef-8407fbcafaeb",
    "metadata": {},
    "outputs": [],
    "source": []
